fix(index): fix image sizing issue

--- a/css/title.css
+++ b/css/title.css
@@ -144,26 +144,25 @@ body {
 }
 
 .title figure {
+    height: 70vh;
     margin: 0;
     position: relative;
     user-select: none;
 }
 
 .title .double-layer img {
-    --mask-position: calc((1 - (var(--x) + var(--y)) / (var(--width) + var(--height))) * 100%);
     height: 100%;
-    mask: linear-gradient(-45deg, #000 50%, #0000 0) var(--mask-position, 100%) var(--mask-position, 100%) / 200% 200%;
-    mask-composite: exclude;
+    object-fit: cover;
     width: 100%;
 }
 
-.title .double-layer::before {
-    background-image: url("../assets/white_cliff_grey_dots.webp");
-    background-size: cover;
-    content: "";
-    height: 100%;
+.title .double-layer img.front {
+    --mask-position: calc((1 - (var(--x) + var(--y)) / (var(--width) + var(--height))) * 100%);
+    left: 0;
+    mask: linear-gradient(-45deg, #000 50%, #0000 0) var(--mask-position, 100%) var(--mask-position, 100%) / 200% 200%;
+    mask-composite: exclude;
     position: absolute;
-    width: 100%;
+    top: 0;
 }
 
 .title .double-layer::after {
