--- a/css/title.css
+++ b/css/title.css
@@ -39,18 +39,18 @@ body {
     z-index: 1;
 }
 
-.title h1 > div {
+.title h1 > span {
     position: absolute;
 }
 
-.title h1 > div:nth-child(1) {
+.title h1 > span:nth-child(1) {
     font-family: "Cormorant Garamond";
     right: 24%;
     top: 40%;
     transform: scale(5.3, 4.2) skew(-33deg, -8deg);
 }
 
-.title h1 > div:nth-child(1)::before {
+.title h1 > span:nth-child(1)::before {
     color: white;
     content: "*";
     font-family: "PixelMplus12";
@@ -61,7 +61,7 @@ body {
     transform: skewY(8deg);
 }
 
-.title h1 > div:nth-child(2) {
+.title h1 > span:nth-child(2) {
     font-family: "PixelMplus12";
     font-size: 10rem;
     right: 11%;
@@ -73,7 +73,7 @@ body {
     top: 20%;
 }
 
-.title h1 > div:nth-child(3) {
+.title h1 > span:nth-child(3) {
     color: #fe0000;
     font-family: "Bebas Neue";
     font-size: 9rem;
@@ -82,7 +82,7 @@ body {
     transform: skewX(-33deg);
 }
 
-.title h1 > div:nth-child(3)::before {
+.title h1 > span:nth-child(3)::before {
     color: #fe0000;
     content: "*";
     font-family: "PixelMplus12";
@@ -92,7 +92,7 @@ body {
     top: -35%;
 }
 
-.title h1 > div:nth-child(4) {
+.title h1 > span:nth-child(4) {
     font-family: "PixelMplus12";
     font-size: 14rem;
     right: -8%;
@@ -100,7 +100,7 @@ body {
     transform: skewX(-33deg);
 }
 
-.title h1 > div:nth-child(5) {
+.title h1 > span:nth-child(5) {
     font-family: "PixelMplus12";
     font-size: 14rem;
     right: -6.7%;
@@ -108,7 +108,7 @@ body {
     transform: skewX(-33deg);
 }
 
-.title h1 > div:nth-child(6) {
+.title h1 > span:nth-child(6) {
     color: #0018ff;
     font-family: "Bebas Neue";
     font-size: 9rem;
@@ -117,7 +117,7 @@ body {
     transform: skewX(-33deg);
 }
 
-.title h1 > div:nth-child(7) {
+.title h1 > span:nth-child(7) {
     font-family: "Roboto";
     font-size: 20rem;
     right: 20%;
@@ -125,7 +125,7 @@ body {
     transform: skewX(-45deg);
 }
 
-.title h1 > div:nth-child(8) {
+.title h1 > span:nth-child(8) {
     color: white;
     font-family: "Roboto";
     font-size: 20rem;
@@ -135,7 +135,7 @@ body {
     transform: skewX(-45deg);
 }
 
-.title h1 > div:nth-child(9) {
+.title h1 > span:nth-child(9) {
     color: #fe0000;
     font-family: "PixelMplus12";
     font-size: 10rem;
