--- a/css/index.css
+++ b/css/index.css
@@ -7,13 +7,14 @@ body {
     font-family: "Redaction", "Noto Serif SC", serif;
     font-size: 1.5rem;
     margin: 0;
-    padding: 5rem;
+    padding: 0 5rem 5rem;
 }
 
 section {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    overflow-y: clip;
 }
 
 .art-collection figure {
