--- a/css/title.css
+++ b/css/title.css
@@ -31,8 +31,7 @@ body {
     font-weight: normal;
     height: 5rem;
     line-height: 1;
-    margin: 0;
-    margin-left: auto;
+    margin: 5rem 0 0;
     opacity: 0;
     pointer-events: none;
     position: relative;
