fix(css): fix font name and add font weight

--- a/css/dream.css
+++ b/css/dream.css
@@ -97,7 +97,7 @@
 }
 
 .dream article {
-    font-family: "汉仪玄宋 35S", serif;
+    font-family: "汉仪玄宋", serif;
     font-size: 1rem;
     position: absolute;
 }
