--- a/css/fonts/HYXuanSong/font.css
+++ b/css/fonts/HYXuanSong/font.css
@@ -1,7 +1,15 @@
 @font-face {
     font-display: swap;
-    font-family: "汉仪玄宋 35S";
+    font-family: "汉仪玄宋";
     font-style: normal;
     font-weight: 400;
     src: url(./HYXuanSong35S.woff2);
+}
+
+@font-face {
+    font-display: swap;
+    font-family: "汉仪玄宋";
+    font-style: normal;
+    font-weight: 700;
+    src: url(./HYXuanSong75S.woff2);
 }
