feat(index): implement hug section

--- a/css/index.css
+++ b/css/index.css
@@ -4,6 +4,7 @@
 @import url(title.css);
 @import url(dream.css);
 @import url(animism.css);
+@import url(hug.css);
 
 :root {
     scrollbar-color: #fe0000 white;
