--- a/css/hug.css
+++ b/css/hug.css
@@ -111,6 +111,7 @@ body section:has(+ .hug) {
     font-family: "汉仪玄宋", serif;
     font-size: 5rem;
     height: 11rem;
+    left: -1rem;
     letter-spacing: 0.25rem;
     opacity: 0;
     position: absolute;
